src/objects/First_Order_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Comment_box_page_1__c</fullName>
        <label>Comment box page 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_box_page_2__c</fullName>
        <label>Comment box page 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_box_page_3__c</fullName>
        <label>Comment box page 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Order_Survey_Result__c</fullName>
        <formula>Result_Question_1__c + Result_Question_2__c + Result_Question_3__c + Result_Question_4__c + Result_Question_5__c + Result_Question_6__c + Result_Question_7__c + Result_Question_8__c + Result_Question_9__c + Result_Question_10__c + Result_Question_11__c + Result_Question_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Order Survey Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>First Order Surveys</relationshipLabel>
        <relationshipName>First_Order_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result_Question_10__c</fullName>
        <label>Result Question 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result_Question_11__c</fullName>
        <label>Result Question 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result_Question_12__c</fullName>
        <label>Result Question 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>First Order Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Order_Survey_Result__c</columns>
        <columns>Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>First Order Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>First Order Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>